Features responsiv finish

--- a/funtome_features.html
+++ b/funtome_features.html
@@ -15,7 +15,8 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat+Subrayada:400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat+Subrayada:400,700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/home/style.css">
+    <link rel="stylesheet" href="css/home/media-style.css">
     <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/features/style-funtome-features.css">
     <link rel="stylesheet" href="css/features/media-funtome-features.css">
@@ -93,22 +94,12 @@
                 </div>
             </div>
 
-            <!-- <div class="icon-social">
-
-                <a href="#" class="icon-fixet">
-                    <img src="img/icon/inst.png" alt="">
-                </a>
-                <a href="#" class="icon-fixet">
-                    <img src="img/icon/facebook.png" alt="">
-                </a>
-                <a href="#" class="icon-fixet">
-                    <img src="img/icon/vk.png" alt="">
-                </a>
-                <a href="#">
-                    <img src="img/icon/youtube.png" alt="">
-                </a>
-
-            </div> -->
+            <div class="icon-social">
+                <a target="_blank" href="https://www.instagram.com/funtome.official/" class="icon-fixet icon-instagram"></a>
+                <a target="_blank" href="https://www.facebook.com/funtome.official/" class="icon-fixet icon-fb"></a>
+                <a target="_blank" href="https://vk.com/funtomemessenger/" class="icon-fixet icon-vk"></a>
+                <a target="_blank" href="https://www.youtube.com/channel/UCTxlUsq7KB_CHMGjxvY1Qqg/" class="icon-fixet icon-youtube"></a>
+        </div>
         </div>
 
 
@@ -138,7 +129,18 @@
                         <div class="features-content">
                             <div class="features-title">
                                 <div class="number-photo">
-                                    <img class="number" src="img/funtome-features/number/01.png" alt="">
+                                    <img class="number" src="img/funtome-features/number/desc/01.png" 
+                                        data-type="desc"
+                                        alt="features"
+                                    >
+                                    <img class="number" src="img/funtome-features/number/tablet/01.png" 
+                                        data-type="tablet"
+                                        alt="features"
+                                    >
+                                    <img class="number" src="img/funtome-features/number/mobile/01.png" 
+                                        data-type="mobile"
+                                        alt="features"
+                                    >
                                 </div>
                                 <div class="title">Профиль</div>
                             </div>
@@ -159,7 +161,18 @@
                         <div class="features-content">
                             <div class="features-title">
                                 <div class="number-photo">
-                                    <img class="number" src="img/funtome-features/number/02.png" alt="">
+                                    <img class="number" src="img/funtome-features/number/desc/02.png" 
+                                        data-type="desc"
+                                        alt="features"
+                                    >
+                                    <img class="number" src="img/funtome-features/number/tablet/02.png" 
+                                        data-type="tablet"
+                                        alt="features"
+                                    >
+                                    <img class="number" src="img/funtome-features/number/mobile/02.png" 
+                                        data-type="mobile"
+                                        alt="features"
+                                    >
                                 </div>
                                 <div class="title">Уровни и награды</div>
                             </div>
@@ -205,7 +218,18 @@
                         <div class="features-content">
                             <div class="features-title">
                                 <div class="number-photo">
-                                    <img class="number" src="img/funtome-features/number/03.png" alt="">
+                                    <img class="number" src="img/funtome-features/number/desc/03.png" 
+                                        data-type="desc"
+                                        alt="features"
+                                    >
+                                    <img class="number" src="img/funtome-features/number/tablet/03.png" 
+                                        data-type="tablet"
+                                        alt="features"
+                                    >
+                                    <img class="number" src="img/funtome-features/number/mobile/03.png" 
+                                        data-type="mobile"
+                                        alt="features"
+                                    >
                                 </div>
                                 <div class="title">Фанумы</div>
                             </div>
@@ -226,7 +250,18 @@
                         <div class="features-content">
                             <div class="features-title">
                                 <div class="number-photo">
-                                    <img class="number" src="img/funtome-features/number/04.png" alt="">
+                                    <img class="number" src="img/funtome-features/number/desc/04.png" 
+                                        data-type="desc"
+                                        alt="features"
+                                    >
+                                    <img class="number" src="img/funtome-features/number/tablet/04.png" 
+                                        data-type="tablet"
+                                        alt="features"
+                                    >
+                                    <img class="number" src="img/funtome-features/number/mobile/04.png" 
+                                        data-type="mobile"
+                                        alt="features"
+                                    >
                                 </div>
                                 <div class="title">Паки</div>
                             </div>
@@ -278,7 +313,18 @@
                         <div class="features-content">
                             <div class="features-title">
                                 <div class="number-photo">
-                                    <img class="number" src="img/funtome-features/number/05.png" alt="">
+                                    <img class="number" src="img/funtome-features/number/desc/05.png" 
+                                        data-type="desc"
+                                        alt="features"
+                                    >
+                                    <img class="number" src="img/funtome-features/number/tablet/05.png" 
+                                        data-type="tablet"
+                                        alt="features"
+                                    >
+                                    <img class="number" src="img/funtome-features/number/mobile/05.png" 
+                                        data-type="mobile"
+                                        alt="features"
+                                    >
                                 </div>
                                 <div class="title">Звуки</div>
                             </div>
@@ -298,7 +344,18 @@
                         <div class="features-content">
                             <div class="features-title">
                                 <div class="number-photo">
-                                    <img class="number" src="img/funtome-features/number/06.png" alt="">
+                                    <img class="number" src="img/funtome-features/number/desc/06.png" 
+                                        data-type="desc"
+                                        alt="features"
+                                    >
+                                    <img class="number" src="img/funtome-features/number/tablet/06.png" 
+                                        data-type="tablet"
+                                        alt="features"
+                                    >
+                                    <img class="number" src="img/funtome-features/number/mobile/06.png" 
+                                        data-type="mobile"
+                                        alt="features"
+                                    >
                                 </div>
                                 <div class="title">Коллажи</div>
                             </div>
@@ -345,7 +402,18 @@
                         <div class="features-content">
                             <div class="features-title">
                                 <div class="number-photo">
-                                    <img class="number" src="img/funtome-features/number/07.png" alt="">
+                                    <img class="number" src="img/funtome-features/number/desc/07.png" 
+                                        data-type="desc"
+                                        alt="features"
+                                    >
+                                    <img class="number" src="img/funtome-features/number/tablet/07.png" 
+                                        data-type="tablet"
+                                        alt="features"
+                                    >
+                                    <img class="number" src="img/funtome-features/number/mobile/07.png" 
+                                        data-type="mobile"
+                                        alt="features"
+                                    >
                                 </div>
                                 <div class="title">Волшебная палочка</div>
                             </div>
@@ -367,7 +435,18 @@
                         <div class="features-content">
                             <div class="features-title">
                                 <div class="number-photo">
-                                    <img class="number" src="img/funtome-features/number/08.png" alt="">
+                                    <img class="number" src="img/funtome-features/number/desc/08.png" 
+                                        data-type="desc"
+                                        alt="features"
+                                    >
+                                    <img class="number" src="img/funtome-features/number/tablet/08.png" 
+                                        data-type="tablet"
+                                        alt="features"
+                                    >
+                                    <img class="number" src="img/funtome-features/number/mobile/08.png" 
+                                        data-type="mobile"
+                                        alt="features"
+                                    >
                                 </div>
                                 <div class="title">Яйцесмайлы</div>
                             </div>
@@ -419,7 +498,7 @@
                     <div class="funtome-text">Funtome Messenger</div>
                     <span class="arrow-next mr68"></span>
                     <div class="butt-mobile">
-                        <a href="#" class="butt-instal butt-green-border mr30">
+                        <a href="#" class="butt-instal butt-green-border">
                             <img src="img/butt/butt_app.png" alt="">
                         </a>
                         <a href="#" class="butt-instal butt-green-border">
@@ -436,20 +515,12 @@
                     </div>
                 </div>
 
-                <!-- <div class="icon-social-footer">
-                    <a href="#" class="icon-footer mr30">
-                        <img src="img/icon/inst.png" alt="">
-                    </a>
-                    <a href="#" class="icon-footer mr30">
-                        <img src="img/icon/facebook.png" alt="">
-                    </a>
-                    <a href="#" class="icon-footer mr30">
-                        <img src="img/icon/vk.png" alt="">
-                    </a>
-                    <a href="#" class="icon-footer">
-                        <img src="img/icon/youtube.png" alt="">
-                    </a>
-                </div> -->
+                <div class="icon-social-footer">
+                    <a target="_blank" href="https://www.instagram.com/funtome.official/" class="icon-footer icon-instagram"></a>
+                    <a target="_blank" href="https://www.facebook.com/funtome.official/" class="icon-footer icon-fb"></a>
+                    <a target="_blank" href="https://vk.com/funtomemessenger/" class="icon-footer icon-vk"></a>
+                    <a target="_blank" href="https://www.youtube.com/channel/UCTxlUsq7KB_CHMGjxvY1Qqg/" class="icon-footer icon-youtube"></a>
+            </div>
 
             </div>
         </div>
