--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
             <section class="video">
                 <div class="video-box">
-                    <video id="video" width="100%" height="886" poster="/img/funtome-home/promo.jpg">
+                    <video id="video" poster="/img/funtome-home/promo.jpg">
                         <source src="/img/funtome-home/promo.mp4" type="video/mp4; codecs=&quot;avc1.42E01E, mp4a.40.2&quot;">
                         <a href="/video/ru/promo.mp4">Download</a>.
                     </video>
@@ -174,7 +174,7 @@
                 </div>
             </section>
 
-            <div class="container-center">
+            <div class="container">
                 <div class="title-instal">
                     <h3 class="text-instal">Онлайн мессенджер для Android и iOS устройств</h3>
                     <span class="arrow-next"></span>
@@ -185,32 +185,44 @@
                 </div>
             </div>
 
-            <div class="container-center">
-                <div class="info-funtome">
-                    <div class="title-info">О приложении</div>
-                    <div class="text-info">
-                        <p class="style-text">Funtome – это абсолютно новый бесплатный мессенджер, меняющий
-                            привычное
-                            представление
-                            об общении. Теперь делиться яркими и живыми эмоциями стало еще проще. Новый графический
-                            мессенджер Funtome
-                            поддерживает функцию переписки картинками.</p>
-                        <p class="style-text">Графика вместо текста. Теперь можно выйти из тесных рамок смайлов и
-                            эмоджи
-                            и
-                            визуализировать все!</p>
-                        <p class="style-text">Скачивайте и общайтесь. Отправляйте новые картинки, получайте награды,
-                            удивляйте
-                            друзей и используйте своё воображение по максимуму!</p>
-                    </div>
-                </div>
-            </div>
-
             <section class="info-photo">
-                <img class="info-photo-size" src="img/funtome-home/info_photo.jpg" alt="">
+                <div class="container-center">
+                    <div class="info-funtome">
+                        <div class="title-info">О приложении</div>
+                        <div class="text-info">
+                            <p class="style-text">Funtome – это абсолютно новый бесплатный мессенджер, меняющий
+                                привычное
+                                представление
+                                об общении. Теперь делиться яркими и живыми эмоциями стало еще проще. Новый графический
+                                мессенджер Funtome
+                                поддерживает функцию переписки картинками.</p>
+                            <p class="style-text">Графика вместо текста. Теперь можно выйти из тесных рамок смайлов и
+                                эмоджи
+                                и
+                                визуализировать все!</p>
+                            <p class="style-text">Скачивайте и общайтесь. Отправляйте новые картинки, получайте награды,
+                                удивляйте
+                                друзей и используйте своё воображение по максимуму!</p>
+                        </div>
+                    </div>
+                </div>    
+
+                <img class="info-photo-size" src="img/funtome-home/info_photo_desc.jpg" 
+                    data-type="desc"
+                    alt="home"
+                >
+                <img class="info-photo-size" src="img/funtome-home/info_photo_desc_tabl.jpg" 
+                    data-type="tablet"
+                    alt="home"
+                >
+                <img class="info-photo-size" src="img/funtome-home/info_photo_desc_mobile.jpg" 
+                    data-type="mobile"
+                    alt="home"
+                >
+
             </section>
 
-            <div class="container-center">
+            <div class="container">
                 <div class="detalis-text">
                     <div class="text">Подробнее в разделе</div>
                     <span class="arrow-next"></span>
@@ -254,18 +266,10 @@
                 </div>
 
                 <div class="icon-social-footer">
-                    <a href="#" class="icon-footer mr30">
-                        <img src="img/icon/inst.png" alt="">
-                    </a>
-                    <a href="#" class="icon-footer mr30">
-                        <img src="img/icon/facebook.png" alt="">
-                    </a>
-                    <a href="#" class="icon-footer mr30">
-                        <img src="img/icon/vk.png" alt="">
-                    </a>
-                    <a href="#" class="icon-footer">
-                        <img src="img/icon/youtube.png" alt="">
-                    </a>
+                    <a target="_blank" href="https://www.instagram.com/funtome.official/" class="icon-footer icon-instagram"></a>
+                    <a target="_blank" href="https://www.facebook.com/funtome.official/" class="icon-footer icon-fb"></a>
+                    <a target="_blank" href="https://vk.com/funtomemessenger/" class="icon-footer icon-vk"></a>
+                    <a target="_blank" href="https://www.youtube.com/channel/UCTxlUsq7KB_CHMGjxvY1Qqg/" class="icon-footer icon-youtube"></a>
                 </div>
 
             </div>
