--- a/index.html
+++ b/index.html
@@ -80,23 +80,25 @@
 
                     <div class="intro-content">
                         <div class="content-title">
-                            <h1 class="h1-ru">Funtome messenger</h1>
+                            <h1 class="h1-ru">Funtome <span class="h1-ru-white">messenger</span></h1>
                         </div>
                         <div class="contetnt-subtitle">
                             <p class="text-subtitle">сделай общение, <span class="text-red">ярче!</span></p>
                         </div>
-                        <div class="content-text">Устанавливайте Funtome бесплатно и общайтесь, превращая обычный текст
-                            или целые
-                            фразы в оригинальные картинки.
-                        </div>
-                        <div class="butt-mobile">
-                            <a href="#" class="butt-instal butt-green mr30">
-                                <img src="img/butt/butt_app.png" alt="">
-                            </a>
-                            <a href="#" class="butt-instal butt-green">
-                                <img src="img/butt/butt_google.png" alt="">
-                            </a>
-                        </div>
+                        <div class="box-intro">
+                            <div class="content-text">Устанавливайте Funtome бесплатно и общайтесь, превращая обычный текст
+                                или целые
+                                фразы в оригинальные картинки.
+                            </div>
+                            <div class="butt-mobile">
+                                <a href="#" class="butt-apple butt-instal butt-green">
+                                    <img src="img/butt/butt_app.png" alt="">
+                                </a>
+                                <a href="#" class="butt-google butt-instal butt-green">
+                                    <img src="img/butt/butt_google.png" alt="">
+                                </a>
+                            </div>
+                        </div>    
                     </div>  
                     <div class="intro-photo">
                         <img class="intro-photo-size" src="/img/funtome-home/intro_photo_group.png" alt="">
@@ -132,30 +134,47 @@
                         <div class="owl-slider-1">
                             <div id="slider_1" class="owl-carousel owl-theme-1">
                                 <div class="slide">
-                                    <img class="photo-style" src="img/funtome-home/mouse.png" alt="">
-                                    <div class="form-text">
-                                        <p class="text-first">
-                                            Встречайте <span class="green">анимированные</span> паки Funtome!
-                                        </p>
-                                    </div>
+                                    <div class="box">     
+                                        <img class="photo-style" src="img/funtome-home/mouse.png" 
+                                            data-type="desc"
+                                            alt="home"
+                                            >
+                                        <img class="photo-style" src="img/funtome-home/mouse.png" 
+                                            data-type="tablet"
+                                            alt="home"
+                                        >   
+                                        <img class="photo-style" src="img/funtome-home/mouse-mabile.png" 
+                                            data-type="mobile"
+                                            alt="home"
+                                        >  
+                                        <div class="form-text">
+                                            <p class="text-first">
+                                                Встречайте <span class="green">анимированные</span> паки Funtome!
+                                            </p>
+                                        </div>
+                                    </div>    
                                 </div>
 
                                 <div class="slide">
-                                    <img class="photo-style" src="img/funtome-home/mouse.png" alt="">
-                                    <div class="form-text">
-                                        <p class="text-first">
-                                            Встречайте <span class="green">анимированные</span> паки Funtome!
-                                        </p>
-                                    </div>
+                                    <div class="box">     
+                                        <img class="photo-style" src="img/funtome-home/mouse.png" alt="">
+                                        <div class="form-text">
+                                            <p class="text-first">
+                                                Встречайте <span class="green">анимированные</span> паки Funtome!
+                                            </p>
+                                        </div>
+                                    </div>    
                                 </div>
 
                                 <div class="slide">
-                                    <img class="photo-style" src="img/funtome-home/mouse.png" alt="">
-                                    <div class="form-text">
-                                        <p class="text-first">
-                                            Встречайте <span class="green">анимированные</span> паки Funtome!
-                                        </p>
-                                    </div>
+                                    <div class="box">     
+                                        <img class="photo-style" src="img/funtome-home/mouse.png" alt="">
+                                        <div class="form-text">
+                                            <p class="text-first">
+                                                Встречайте <span class="green">анимированные</span> паки Funtome!
+                                            </p>
+                                        </div>
+                                    </div>    
                                 </div>
                             </div> <!-- end slide -->
                         </div> <!-- end owl-slider-1 -->
@@ -186,7 +205,7 @@
             </div>
 
             <section class="info-photo">
-                <div class="container-center">
+                <div class="container">
                     <div class="info-funtome">
                         <div class="title-info">О приложении</div>
                         <div class="text-info">
@@ -226,7 +245,7 @@
                 <div class="detalis-text">
                     <div class="text">Подробнее в разделе</div>
                     <span class="arrow-next"></span>
-                    <a href="/features" class="butt butt-outlined">Особенности</a>
+                    <a href="funtome_features.html" class="butt butt-outlined">Особенности</a>
                 </div>
 
                 <div class="conditiuns">
@@ -246,15 +265,17 @@
                         <img class="icon-style" src="img/icon/funtome-footer.svg" alt="">
                     </div>
                     <div class="funtome-text">Funtome Messenger</div>
-                    <span class="arrow-next mr68"></span>
+                    <span class="arrow-next mr34"></span>
+
                     <div class="butt-mobile">
-                        <a href="#" class="butt-instal butt-green-border">
+                        <a href="#" class="butt-apple butt-instal butt-green-border">
                             <img src="img/butt/butt_app.png" alt="">
                         </a>
-                        <a href="#" class="butt-instal butt-green-border">
+                        <a href="#" class="butt-google butt-instal butt-green-border">
                             <img src="img/butt/butt_google.png" alt="">
                         </a>
                     </div>
+
                 </div>
 
                 <div class="footer-contact">
