--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
                             </div>
                             <div class="butt-mobile">
                                 <a href="#" class="butt-apple butt-instal butt-green">
-                                    <img src="img/butt/butt_app.png" alt="">
+                                    <img class="instal-img-app" src="img/butt/butt_app.svg" alt="">
                                 </a>
                                 <a href="#" class="butt-google butt-instal butt-green">
-                                    <img src="img/butt/butt_google.png" alt="">
+                                    <img class="instal-img-google" src="img/butt/butt_google.svg" alt="">
                                 </a>
                             </div>
                         </div>    
@@ -108,19 +108,11 @@
             </div>
 
             <div class="icon-social">
-                <a href="#" class="icon-fixet">
-                    <img src="img/icon/inst.png" alt="">
-                </a>
-                <a href="#" class="icon-fixet">
-                    <img src="img/icon/facebook.png" alt="">
-                </a>
-                <a href="#" class="icon-fixet">
-                    <img src="img/icon/vk.png" alt="">
-                </a>
-                <a href="#">
-                    <img src="img/icon/youtube.png" alt="">
-                </a>
-            </div>
+                <a target="_blank" href="https://www.instagram.com/funtome.official/" class="icon-fixet icon-instagram"></a>
+                <a target="_blank" href="https://www.facebook.com/funtome.official/" class="icon-fixet icon-fb"></a>
+                <a target="_blank" href="https://vk.com/funtomemessenger/" class="icon-fixet icon-vk"></a>
+                <a target="_blank" href="https://www.youtube.com/channel/UCTxlUsq7KB_CHMGjxvY1Qqg/" class="icon-fixet icon-youtube"></a>
+        </div>
 
         </div>
 
@@ -254,49 +246,49 @@
                 </div>
             </div>
         </div> <!-- content-block end -->
-    </div>
+    
 
-    <footer>
-        <div class="footer">
-            <div class="container footer-container">
+        <footer>
+            <div class="footer">
+                <div class="container footer-container">
 
-                <div class="footer-funtome">
-                    <div class="footer-icon">
-                        <img class="icon-style" src="img/icon/funtome-footer.svg" alt="">
+                    <div class="footer-funtome">
+                        <div class="footer-icon">
+                            <img class="icon-style" src="img/icon/funtome-footer.svg" alt="">
+                        </div>
+                        <div class="funtome-text">Funtome Messenger</div>
+                        <span class="arrow-next mr34"></span>
+
+                        <div class="butt-mobile">
+                            <a href="#" class="butt-apple butt-instal butt-green-border">
+                                <img class="instal-img-app" src="img/butt/butt_app.svg" alt="">
+                            </a>
+                            <a href="#" class="butt-google butt-instal butt-green-border">
+                                <img class="instal-img-google" src="img/butt/butt_google.svg" alt="">
+                            </a>
+                        </div>
+
                     </div>
-                    <div class="funtome-text">Funtome Messenger</div>
-                    <span class="arrow-next mr34"></span>
 
-                    <div class="butt-mobile">
-                        <a href="#" class="butt-apple butt-instal butt-green-border">
-                            <img src="img/butt/butt_app.png" alt="">
-                        </a>
-                        <a href="#" class="butt-google butt-instal butt-green-border">
-                            <img src="img/butt/butt_google.png" alt="">
-                        </a>
+                    <div class="footer-contact">
+                        <div class="copyright">2018-2019 UAB"FlowTech Pro"</div>
+                        <div class="address">Лауру 36F, Вильнюс, Литва</div>
+                        <div class="footer-contacts">
+                            <a href="info@funtome.com" class="mail">info@funtome.com</a>
+                        </div>
+                    </div>
+
+                    <div class="icon-social-footer">
+                        <a target="_blank" href="https://www.instagram.com/funtome.official/" class="icon-footer icon-instagram"></a>
+                        <a target="_blank" href="https://www.facebook.com/funtome.official/" class="icon-footer icon-fb"></a>
+                        <a target="_blank" href="https://vk.com/funtomemessenger/" class="icon-footer icon-vk"></a>
+                        <a target="_blank" href="https://www.youtube.com/channel/UCTxlUsq7KB_CHMGjxvY1Qqg/" class="icon-footer icon-youtube"></a>
                     </div>
 
                 </div>
+            </div> <!-- end footer -->
 
-                <div class="footer-contact">
-                    <div class="copyright">2018-2019 UAB"FlowTech Pro"</div>
-                    <div class="address">Лауру 36F, Вильнюс, Литва</div>
-                    <div class="footer-contacts">
-                        <a href="info@funtome.com" class="mail">info@funtome.com</a>
-                    </div>
-                </div>
-
-                <div class="icon-social-footer">
-                    <a target="_blank" href="https://www.instagram.com/funtome.official/" class="icon-footer icon-instagram"></a>
-                    <a target="_blank" href="https://www.facebook.com/funtome.official/" class="icon-footer icon-fb"></a>
-                    <a target="_blank" href="https://vk.com/funtomemessenger/" class="icon-footer icon-vk"></a>
-                    <a target="_blank" href="https://www.youtube.com/channel/UCTxlUsq7KB_CHMGjxvY1Qqg/" class="icon-footer icon-youtube"></a>
-                </div>
-
-            </div>
-        </div> <!-- end footer -->
-
-    </footer>
+        </footer>
 
     </div> <!-- End App -->
 
